[gd_scene load_steps=14 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://UI/HUD.gd" type="Script" id=2]
[ext_resource path="res://Maze.gd" type="Script" id=3]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 2, 40, 40 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.203922, 0.227451, 0.25098, 1 )
metallic = 0.6
roughness = 0.25

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( -1, 20, 20, 1, 20, 20, -1, -20, 20, 1, 20, 20, 1, -20, 20, -1, -20, 20, 1, 20, -20, -1, 20, -20, 1, -20, -20, -1, 20, -20, -1, -20, -20, 1, -20, -20, 1, 20, 20, 1, 20, -20, 1, -20, 20, 1, 20, -20, 1, -20, -20, 1, -20, 20, -1, 20, -20, -1, 20, 20, -1, -20, -20, -1, 20, 20, -1, -20, 20, -1, -20, -20, 1, 20, 20, -1, 20, 20, 1, 20, -20, -1, 20, 20, -1, 20, -20, 1, 20, -20, -1, -20, 20, 1, -20, 20, -1, -20, -20, 1, -20, 20, 1, -20, -20, -1, -20, -20 )

[sub_resource type="CubeMesh" id=4]
size = Vector3( 2, 40, 40 )

[sub_resource type="ConcavePolygonShape" id=5]
data = PoolVector3Array( -1, 20, 20, 1, 20, 20, -1, -20, 20, 1, 20, 20, 1, -20, 20, -1, -20, 20, 1, 20, -20, -1, 20, -20, 1, -20, -20, -1, 20, -20, -1, -20, -20, 1, -20, -20, 1, 20, 20, 1, 20, -20, 1, -20, 20, 1, 20, -20, 1, -20, -20, 1, -20, 20, -1, 20, -20, -1, 20, 20, -1, -20, -20, -1, 20, 20, -1, -20, 20, -1, -20, -20, 1, 20, 20, -1, 20, 20, 1, 20, -20, -1, 20, 20, -1, 20, -20, 1, 20, -20, -1, -20, 20, 1, -20, 20, -1, -20, -20, 1, -20, 20, 1, -20, -20, -1, -20, -20 )

[sub_resource type="CubeMesh" id=6]
size = Vector3( 40, 40, 2 )

[sub_resource type="ConcavePolygonShape" id=7]
data = PoolVector3Array( -20, 20, 1, 20, 20, 1, -20, -20, 1, 20, 20, 1, 20, -20, 1, -20, -20, 1, 20, 20, -1, -20, 20, -1, 20, -20, -1, -20, 20, -1, -20, -20, -1, 20, -20, -1, 20, 20, 1, 20, 20, -1, 20, -20, 1, 20, 20, -1, 20, -20, -1, 20, -20, 1, -20, 20, -1, -20, 20, 1, -20, -20, -1, -20, 20, 1, -20, -20, 1, -20, -20, -1, 20, 20, 1, -20, 20, 1, 20, 20, -1, -20, 20, 1, -20, 20, -1, 20, 20, -1, -20, -20, 1, 20, -20, 1, -20, -20, -1, 20, -20, 1, 20, -20, -1, -20, -20, -1 )

[sub_resource type="ConcavePolygonShape" id=8]
data = PoolVector3Array( -20, 20, 1, 20, 20, 1, -20, -20, 1, 20, 20, 1, 20, -20, 1, -20, -20, 1, 20, 20, -1, -20, 20, -1, 20, -20, -1, -20, 20, -1, -20, -20, -1, 20, -20, -1, 20, 20, 1, 20, 20, -1, 20, -20, 1, 20, 20, -1, 20, -20, -1, 20, -20, 1, -20, 20, -1, -20, 20, 1, -20, -20, -1, -20, 20, 1, -20, -20, 1, -20, -20, -1, 20, 20, 1, -20, 20, 1, 20, 20, -1, -20, 20, 1, -20, 20, -1, 20, 20, -1, -20, -20, 1, 20, -20, 1, -20, -20, -1, 20, -20, 1, 20, -20, -1, -20, -20, -1 )

[sub_resource type="CubeMesh" id=9]
size = Vector3( 40, 2, 40.006 )

[sub_resource type="BoxShape" id=10]
extents = Vector3( 20, 1, 20 )

[node name="Game" type="Spatial"]
script = ExtResource( 1 )

[node name="Walls" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 14.363, 16 )

[node name="MeshInstance" type="MeshInstance" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18.848, 4.98452, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18.848, 4.98452, 0 )
shape = SubResource( 3 )

[node name="MeshInstance2" type="MeshInstance" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18.9687, 4.98452, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 2 )

[node name="CollisionShape2" type="CollisionShape" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18.9687, 4.98452, 0 )
shape = SubResource( 5 )

[node name="MeshInstance3" type="MeshInstance" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.239557, 4.98452, -19.0708 )
mesh = SubResource( 6 )
material/0 = SubResource( 2 )

[node name="CollisionShape3" type="CollisionShape" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.239557, 4.98452, -19.0708 )
shape = SubResource( 7 )

[node name="MeshInstance4" type="MeshInstance" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.239557, 4.98452, 18.7422 )
mesh = SubResource( 6 )
material/0 = SubResource( 2 )

[node name="CollisionShape4" type="CollisionShape" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.239557, 4.98452, 18.7422 )
shape = SubResource( 8 )

[node name="Maze" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 0, 16 )
collision_layer = 31
collision_mask = 31

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
mesh = SubResource( 9 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 10 )

[node name="Player1Pos" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 10, 0 )

[node name="Player2Pos" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.208, 16.0894, 21.329 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.927001, -0.371426, 0.0520815, 0.0960859, 0.369413, 0.924284, -0.362543, -0.851808, 0.378135, 0, 23.3954, 0 )

[node name="HUD" type="Control" parent="."]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HUD"]
margin_right = 1024.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 0.25098 )

[node name="Player" type="Label" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.919046, 0.39415, 0, -0.39415, 0.919046, 0, 10.8992, 22.0224 )
current = true

[node name="GameOverScreen" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dead" type="ColorRect" parent="GameOverScreen"]
pause_mode = 2
margin_right = 1026.0
margin_bottom = 599.0
color = Color( 0.584314, 0.0156863, 0.0156863, 0.654902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game Over" type="Label" parent="GameOverScreen/dead"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.7979
margin_top = -65.0143
margin_right = 3.20209
margin_bottom = -42.0143
rect_scale = Vector2( 2, 2 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="GameOverScreen/dead"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.5
margin_top = -10.0
margin_right = 28.5
margin_bottom = 10.0
text = "Restart"

[node name="Quit" type="Button" parent="GameOverScreen/dead"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.899
margin_left = -18.8108
margin_top = 46.3927
margin_right = 21.1892
margin_bottom = -172.608
text = "Quit"

[connection signal="pressed" from="GameOverScreen/dead/Restart" to="HUD" method="_on_Restart_pressed"]
[connection signal="pressed" from="GameOverScreen/dead/Quit" to="HUD" method="_on_Quit_pressed"]
[connection signal="pressed" from="GameOverScreen/dead/Quit" to="." method="_on_Quit_pressed"]
